tests/ui/mismatched_types/hr-projection-mismatch.next.stderr
error[E0271]: type mismatch resolving `<Thing as Trait<'a>>::Assoc == &i32`
  --> $DIR/hr-projection-mismatch.rs:20:15
   |
LL |     wrap::<_, Thing>();
   |               ^^^^^ type mismatch resolving `<Thing as Trait<'a>>::Assoc == &i32`
   |
note: types differ
  --> $DIR/hr-projection-mismatch.rs:14:18
   |
LL |     type Assoc = &'a i32;
   |                  ^^^^^^^
note: required by a bound in `wrap`
  --> $DIR/hr-projection-mismatch.rs:17:33
   |
LL | fn wrap<T, U: for<'a> Trait<'a, Assoc = T>>() {}
   |                                 ^^^^^^^^^ required by this bound in `wrap`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0271`.
